# gateKeeper

./: .gitattributes  .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: code_recipe.json  default.json
data/: README.md
docs/: ARCHITECTURE.md  COMPOSITE_TEST_PLAN.md  COMPOSITE_TEST_REPORT.md  DATA_AUGMENTATION.md  DOCUMENTATION_STANDARD.md  EXE_RUNTIME_TEST_PLAN.md  FIELD_STARTUP_GUIDE_A4.html  MODEL_LICENSES.md  MVP.md  OPERATOR_GUIDE.md  PLC_INTEGRATION.md  RELEASE.md  SAFETY.md  THIRD_PARTY.md  TRAINING.md  TRAINING_VERIFICATION.md
installer/: gatekeeper.iss
models/: README.md  manifest.example.json
plugins/: README.md
scripts/: build_release_bundle.py  check_release_gate.py  download_ocr_model.py  evaluate_composite.py  evaluate_runtime_decisions.py  generate_fpcb_dataset.py  generate_ocr_synthetic.py  prepare_release_models.py  replay_frame_gate_fhd.py  training_commands.py  validate_detection_dataset.py  validate_english_docs.py  validate_ocr_dataset.py  verify_training.py
src/gatekeeper/: __init__.py  __main__.py
src/gatekeeper/application/: inspection.py
src/gatekeeper/domain/: __init__.py  code_recipe.py  decision.py  models.py
src/gatekeeper/inference/: __init__.py  paddle_ocr.py  pipeline.py  roi.py  types.py  yolo26_detector.py
src/gatekeeper/infrastructure/: __init__.py  alarm.py  audit.py  model_registry.py  plc.py
src/gatekeeper/ingest/: __init__.py  folder_watcher.py  frame_gate.py
src/gatekeeper/runtime/: __init__.py  paths.py
src/gatekeeper/storage/: __init__.py  sqlite_store.py
src/gatekeeper/training/: __init__.py  annotation_store.py  code_labels.py  cpu_runner.py  embedded_runner.py  verification.py  yolo_export.py
src/gatekeeper/ui/: __init__.py  app.py  labeling_view.py  training_view.py
tests/: test_annotation_store.py  test_audit.py  test_code_recipe.py  test_decision.py  test_frame_gate.py  test_frame_gate_fhd_replay.py  test_labeling_ui.py  test_paddle_ocr.py  test_runtime.py  test_training.py
training/: README.md
