[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gatekeeper-aam"
version = "0.2.0"
description = "Windows vision gate for OLED AAM panel model-code inspection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
desktop = [
  "PySide6>=6.8,<7",
]
inference = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "onnxruntime>=1.20,<2",
  "paddleocr>=3.2,<4",
]
runtime = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "onnxruntime>=1.20,<2",
  "paddlepaddle>=3.0,<4",
  "paddleocr>=3.2,<4",
]
training = [
  "ultralytics>=8.3,<9",
  "paddlepaddle>=3.0,<4",
  "paddleocr>=3.2,<4",
  "pillow>=10,<13",
]
release = [
  "pyinstaller>=6,<7",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "onnxruntime>=1.20,<2",
  "paddlepaddle>=3.0,<4",
  "paddleocr>=3.2,<4",
]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
gatekeeper = "gatekeeper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gatekeeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
